<resources>
    <string name="app_name">NavigationViewLearning</string>
    <string name="message">Message</string>
    <string name="home">Home</string>
    <string name="friends">Friends</string>
    <string name="discussion">Discussion</string>
    <string name="sub_items">Sub Items</string>
    <string name="sub_item_1">Sub Item 1</string>
    <string name="sub_item_2">Sub Item 2</string>
    <string name="hello_xiongda">Hello XiongDa</string>
</resources>
