<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- 指定单选 -->

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@mipmap/ic_launcher_round"
            android:title="@string/home"
            />
        <item
            android:id="@+id/nav_messages"
            android:icon="@mipmap/ic_launcher_round"
            android:title="@string/message"
            />
        <item
            android:id="@+id/nav_friends"
            android:icon="@mipmap/ic_launcher_round"
            android:title="@string/friends"
            />
        <item

            android:id="@+id/nav_discussion"
            android:icon="@mipmap/ic_launcher_round"
            android:title="@string/discussion"
            />
    </group>
    <item
        android:title="@string/sub_items">
        <menu>
            <item
                android:icon="@mipmap/ic_launcher_round"
                android:title="@string/sub_item_1"
                />
            <item
                android:icon="@mipmap/ic_launcher_round"
                android:title="@string/sub_item_2"
                />
            <item
                android:icon="@mipmap/ic_launcher_round"
                android:title="@string/sub_item_2"
                />
            <item
                android:icon="@mipmap/ic_launcher_round"
                android:title="@string/sub_item_2"
                />
            <item
                android:icon="@mipmap/ic_launcher_round"
                android:title="@string/sub_item_2"
                />
            <item
                android:icon="@mipmap/ic_launcher_round"
                android:title="@string/sub_item_2"
                />
            <item
                android:icon="@mipmap/ic_launcher_round"
                android:title="@string/sub_item_2"
                />
            <item
                android:icon="@mipmap/ic_launcher_round"
                android:title="@string/sub_item_2"
                />
            <item
                android:icon="@mipmap/ic_launcher_round"
                android:title="@string/sub_item_2"
                />
        </menu>
    </item>
</menu>